# andromeda-desktop-clients

./: .clang-tidy  .gitignore  .gitmodules  A2Fuse.cpp  A2Fuse.hpp  CMakeLists.inc.txt  CMakeLists.txt  FindFUSE.cmake  FuseWrapper.cpp  FuseWrapper.hpp  Options.cpp  Options.hpp  README.md  andromeda.cmake  count  main.cpp
.github/workflows/: master.yaml
andromeda/: Backend.cpp  Backend.hpp  CLIBackend.cpp  CLIBackend.hpp  CLIRunner.cpp  CLIRunner.hpp  CMakeLists.txt  Config.cpp  Config.hpp  FSConfig.cpp  FSConfig.hpp  HTTPBackend.cpp  HTTPBackend.hpp  HTTPRunner.cpp  HTTPRunner.hpp  Runner.hpp  Utilities.cpp  Utilities.hpp
andromeda/filesystem/: BaseFolder.cpp  BaseFolder.hpp  CMakeLists.txt  DataManager.cpp  DataManager.hpp  File.cpp  File.hpp  FileData.cpp  FileData.hpp  Folder.cpp  Folder.hpp  Item.cpp  Item.hpp
andromeda/filesystem/folders/: Adopted.cpp  Adopted.hpp  CMakeLists.txt  Filesystem.cpp  Filesystem.hpp  Filesystems.cpp  Filesystems.hpp  Folder.cpp  Folder.hpp  PlainFolder.cpp  PlainFolder.hpp  RootFolder.cpp  RootFolder.hpp  Share.cpp  Share.hpp  Shared.cpp  Shared.hpp  SuperRoot.cpp  SuperRoot.hpp
libandromeda/: CMakeLists.txt
libandromeda/filesystem/: CMakeLists.txt
libandromeda/filesystem/folders/: CMakeLists.txt
src/: andromeda.cmake
src/lib/andromeda/: 3rdparty.cmake  Backend.cpp  Backend.hpp  BackendOptions.cpp  BackendOptions.hpp  BaseException.hpp  BaseOptions.cpp  BaseOptions.hpp  BaseRunner.hpp  CLIRunner.cpp  CLIRunner.hpp  CMakeLists.txt  Config.cpp  Config.hpp  ConfigOptions.cpp  ConfigOptions.hpp  Crypto.cpp  Crypto.hpp  Debug.cpp  Debug.hpp  Doxyfile  FSConfig.cpp  FSConfig.hpp  FindSodium.cmake  HTTPOptions.cpp  HTTPOptions.hpp  HTTPRunner.cpp  HTTPRunner.hpp  HTTPRunnerOptions.cpp  HTTPRunnerOptions.hpp  OrderedMap.hpp  PlatformUtil.cpp  PlatformUtil.hpp  RunnerInput.hpp  ScopeLocked.hpp  SecureBuffer.cpp  SecureBuffer.hpp  Semaphor.hpp  SharedMutex.hpp  StringUtil.cpp  (+7 more)
src/lib/andromeda-fuse/: CMakeLists.txt  Doxyfile  FindFUSE.cmake  FuseAdapter.cpp  FuseAdapter.hpp  FuseOperations.cpp  FuseOperations.h  FuseOperations.hpp  FuseOptions.cpp  FuseOptions.hpp  FuseWrapper.cpp  FuseWrapper.hpp  a2fuse_ops.c  libfuse_Includes.h
src/lib/andromeda-sync/: CMakeLists.txt  Doxyfile
src/lib/andromeda/_tests/: .clang-tidy  BaseOptionsTest.cpp  CMakeLists.txt  CryptoTest.cpp  HTTPRunnerTest.cpp  OrderedMap.cpp  OrderedMapTest.cpp  SecureBufferTest.cpp  SemaphorTest.cpp  SharedMutexTest.cpp  StringUtilTest.cpp  UtilitiesTest.cpp  base64Test.cpp  demotest.cpp
src/lib/andromeda/_tests/backend/: CMakeLists.txt  HTTPRunnerTest.cpp
src/lib/andromeda/_tests/database/: BaseObjectTest.cpp  CMakeLists.txt  FieldTypesTest.cpp  MixedValueTest.cpp  ObjectDatabaseTest.cpp  QueryBuilderTest.cpp  SqliteDatabaseTest.cpp  TableBuilderTest.cpp  testObjects.hpp
src/lib/andromeda/_tests/database/fieldtypes/: CMakeLists.txt  CounterTypeTest.cpp  JsonTypeTest.cpp  ObjectRefTest.cpp  ScalarTypeTest.cpp
src/lib/andromeda/backend/: BackendException.hpp  BackendImpl.cpp  BackendImpl.hpp  BaseRunner.hpp  CLIRunner.cpp  CLIRunner.hpp  CMakeLists.txt  Config.cpp  Config.hpp  ConfigOptions.cpp  ConfigOptions.hpp  HTTPOptions.cpp  HTTPOptions.hpp  HTTPRunner.cpp  HTTPRunner.hpp  RunnerInput.cpp  RunnerInput.hpp  RunnerOptions.cpp  RunnerOptions.hpp  RunnerPool.cpp  RunnerPool.hpp  SessionStore.cpp  SessionStore.hpp
src/lib/andromeda/database/: BaseObject.cpp  BaseObject.hpp  CMakeLists.txt  DatabaseException.hpp  FieldTypes.cpp  FieldTypes.hpp  MixedInput.cpp  MixedInput.hpp  MixedOutput.cpp  MixedOutput.hpp  MixedValue.cpp  MixedValue.hpp  ObjectDatabase.cpp  ObjectDatabase.hpp  QueryBuilder.cpp  QueryBuilder.hpp  SqliteDatabase.cpp  SqliteDatabase.hpp  TableBuilder.cpp  TableBuilder.hpp  TableInstaller.cpp  TableInstaller.hpp  VersionEntry.cpp  VersionEntry.hpp
src/lib/andromeda/database/fieldtypes/: BaseField.cpp  BaseField.hpp  CMakeLists.txt  CounterType.hpp  JsonType.cpp  JsonType.hpp  ObjectRef.hpp  ScalarType.hpp
src/lib/andromeda/filesystem/: CMakeLists.txt  FSConfig.cpp  FSConfig.hpp  File.cpp  File.hpp  Folder.cpp  Folder.hpp  Item.cpp  Item.hpp
src/lib/andromeda/filesystem/filedata/: BandwidthMeasure.cpp  BandwidthMeasure.hpp  CMakeLists.txt  CacheManager.cpp  CacheManager.hpp  CacheOptions.cpp  CacheOptions.hpp  CachingAllocator.cpp  CachingAllocator.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  Page.cpp  Page.hpp  PageBackend.cpp  PageBackend.hpp  PageManager.cpp  PageManager.hpp
src/lib/andromeda/filesystem/folders/: Adopted.cpp  Adopted.hpp  CMakeLists.txt  Filesystem.cpp  Filesystem.hpp  Filesystems.cpp  Filesystems.hpp  PlainFolder.cpp  PlainFolder.hpp  Share.cpp  Share.hpp  Shared.cpp  Shared.hpp  SuperRoot.cpp  SuperRoot.hpp
src/lib/andromeda/fsitems/: CMakeLists.txt  File.cpp  File.hpp  Folder.cpp  Folder.hpp  Item.cpp  Item.hpp
src/lib/andromeda/fsitems/folders/: Adopted.cpp  Adopted.hpp  Filesystem.cpp  Filesystem.hpp  Filesystems.cpp  Filesystems.hpp  PlainFolder.cpp  PlainFolder.hpp  Share.cpp  Share.hpp  Shared.cpp  Shared.hpp  SuperRoot.cpp  SuperRoot.hpp
tools/: Doxyfile.inc  analyze  build  builddev  buildrel  checkall  combine  count  mkdocs  unittests
